--- a/package.json
+++ b/package.json
@@ -31,14 +31,9 @@
     "cz-customizable": "^6.3.0",
     "husky": "^7.0.1"
   },
-  "husky": {
-    "hooks": {
-      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
-    }
-  },
   "config": {
     "commitizen": {
-      "path": "node_modules/cz-customizable"
+      "path": "cz-customizable"
     }
   }
 }
