--- a/package.json
+++ b/package.json
@@ -25,9 +25,10 @@
   "devDependencies": {
     "@commitlint/cli": "^12.1.4",
     "@commitlint/config-conventional": "^12.1.4",
+    "commitizen": "^4.2.4",
+    "commitlint-config-cz": "^0.13.3",
     "conventional-changelog": "^3.1.4",
     "conventional-changelog-cli": "^2.0.17",
-    "commitizen": "^4.2.4",
     "cz-customizable": "^6.3.0",
     "husky": "^7.0.1"
   },
